--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # spring param
-server.port=8080
+server.port=8087
 # private params
-simple.spring.database.address=jdbc:postgresql://localhost:5432/simpleSpring
-simple.spring.database.username=postgres
-simple.spring.database.password=1324
+simple.spring.database.address=jdbc:sqlserver://localhost:1433;databaseName=MyFirst
+simple.spring.database.username=daniel
+simple.spring.database.password=4257
