--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-    developmentOnly 'org.postgresql:postgresql:42.2.8'
+implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '6.1.0.jre7'
+
 }
